updated swagger and code
